[project]
name = "comfyui_helpfulnodes"
description = "NODES: Prepare Crop Around Keypoints"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch"]

[project.urls]
Repository = "https://github.com/jordancoult/ComfyUI_HelpfulNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_HelpfulNodes"
Icon = ""
